<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imgAvatarTeacher"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="center"
                app:civ_border_width="@dimen/_2sdp"
                app:civ_border_color="@color/red"/>

            <TextView
                android:id="@+id/tvTeacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Acount_Name_Teacher"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/Experient"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvExperient"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Experient"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/Job"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvJob"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Job"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Subjects"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvSubject"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Subjects"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Gender"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Age"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Age"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Place"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvAdress"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Place"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Vehicle"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvVehicle"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Vehicle"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Free_Time"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvFreetime"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Free_Time"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="@string/Price"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/tvTuition"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:hint="@string/Price"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_222sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/boder_button">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Describe"
                        android:drawableRight="@drawable/ic_down"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_15sdp"/>
                    <TextView
                        android:id="@+id/tvProcessWork"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/crystal"
                        android:hint="@string/Describe"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_15sdp"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnLocationDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@color/crystal"
                android:text="@string/Show_Location_Details"
                android:textColor="@color/red"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                android:layout_margin="@dimen/_10sdp"/>
            <Button
                android:id="@+id/btnContact"
                android:layout_margin="@dimen/_20sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/Contact"
                android:textSize="@dimen/_12sdp"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:background="@drawable/button"/>
        </LinearLayout>
    </ScrollView>
</layout>