<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainerTeacher"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thông Tin"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bsimgAcountTeacher"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            app:civ_border_width="@dimen/_2sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            app:civ_border_color="@color/red"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/bstvAcount_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Acount_Name"
                android:layout_margin="@dimen/_3sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <LinearLayout
                android:id="@+id/lnExperient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/bstvAcount_name">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Experient"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>

                <TextView
                    android:id="@+id/bstvExperient"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/Experient"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnSubjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lnExperient">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Subjects"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/bstvSubject"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/Subjects"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lnSubjects">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2"
                    android:text="@string/Gender"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/bstvGender"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/Gender"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lnGender">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Age"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text="@string/Two_Point"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/bstvAge"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/Age"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/boder_button"
        android:drawableLeft="@drawable/find_teacher"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/Detail"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tvContact"
        android:background="@drawable/boder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contact"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_15sdp"
        android:drawableLeft="@drawable/ic_phone"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"/>

    <TextView
        android:id="@+id/tvDirection"
        android:background="@drawable/boder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Direction"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_15sdp"
        android:drawableLeft="@drawable/find_class"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"/>
</LinearLayout>