<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_105sdp"
    android:layout_margin="@dimen/_2sdp"
    android:background= "@drawable/boder_button"
    android:orientation="horizontal"
    android:id="@+id/view_item_teacher">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgAcountTeacher"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        app:civ_border_width="@dimen/_2sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        app:civ_border_color="@color/red"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvAcount_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Acount_Name"
            android:layout_margin="@dimen/_3sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <LinearLayout
            android:id="@+id/lnExperient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvAcount_name">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.3"
                android:layout_height="wrap_content"
                android:text="@string/Experient"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/Two_Point"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/tvExperient"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/Experient"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnSubjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/lnExperient">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.3"
                android:layout_height="wrap_content"
                android:text="@string/Subjects"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/Two_Point"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>
            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/Subjects"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/lnSubjects">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:text="@string/Gender"
                android:textColor="@color/red"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/Two_Point"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>
            <TextView
                android:id="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/Gender"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/lnGender">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.3"
                android:layout_height="wrap_content"
                android:text="@string/Age"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/Two_Point"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"/>
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/Age"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>